# mcp_router

./: .gitignore  README.md  pyproject.toml
src/mcp_router/: __init__.py  instructions.py  log.py  main.py  mcp_engine.py  types.py
