[project]
name = "mcp-router"
version = "0.1.0"
description = "A Python package for orchestrating multiple MCP (Model Context Protocol) servers through a unified interface"
readme = "README.md"
authors = [
    { name = "BA Ibrahima", email = "ibrahima.elmokhtar@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.0",
    "fastmcp>=2.13.0.2",
    "mcp>=1.21.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "pyzmq>=27.1.0",
]

[project.scripts]
mcp-router = "mcp_router:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
